version/0.23/_sources/API/_autosummary/ansys.aedt.core.desktop.Desktop.rst.txt
Desktop
=======

.. currentmodule:: ansys.aedt.core.desktop

.. autoclass:: Desktop

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Desktop.active_design
      
      
      Desktop.active_project
      
      
      Desktop.analyze_all
      
      
      Desktop.change_active_dso_config_name
      
      
      Desktop.change_license_type
      
      
      Desktop.change_registry_from_file
      
      
      Desktop.change_registry_key
      
      
      Desktop.check_starting_mode
      
      
      Desktop.clear_messages
      
      
      Desktop.close_desktop
      
      
      Desktop.close_windows
      
      
      Desktop.design_list
      
      
      Desktop.design_type
      
      
      Desktop.disable_autosave
      
      
      Desktop.disable_optimetrics
      
      
      Desktop.download_job_results
      
      
      Desktop.enable_autosave
      
      
      Desktop.enable_optimetrics
      
      
      Desktop.get_ansyscloud_job_info
      
      
      Desktop.get_available_cloud_config
      
      
      Desktop.get_available_toolkits
      
      
      Desktop.get_example
      
      
      Desktop.get_monitor_data
      
      
      Desktop.load_project
      
      
      Desktop.project_path
      
      
      Desktop.release_desktop
      
      
      Desktop.save_project
      
      
      Desktop.select_scheduler
      
      
      Desktop.stop_simulations
      
      
      Desktop.submit_ansys_cloud_job
      
      
      Desktop.submit_job
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Desktop.aedt_install_dir
      Desktop.aedt_process_id
      Desktop.aedt_version_id
      Desktop.aedt_version_string
      Desktop.are_there_simulations_running
      Desktop.close_on_exit
      Desktop.current_student_version
      Desktop.current_version
      Desktop.grpc_mode
      Desktop.install_path
      Desktop.installed_versions
      Desktop.is_grpc_api
      Desktop.launched_by_pyaedt
      Desktop.logger
      Desktop.machine
      Desktop.messenger
      Desktop.new_desktop
      Desktop.non_graphical
      Desktop.odesktop
      Desktop.personallib
      Desktop.port
      Desktop.project_list
      Desktop.public_dir
      Desktop.pyaedt_dir
      Desktop.src_dir
      Desktop.student_version
      Desktop.syslib
      Desktop.userlib
   
   